# benky-fy

./: .dockerignore  .gitignore  CHUNK1_ANALYSIS_SUMMARY.md  CHUNK2_ENHANCEMENT_SUMMARY.md  CHUNK3_CONJUGATION_CHECKER_SUMMARY.md  CHUNK4_ENGINE_UPDATE_SUMMARY.md  CONJUGATION_ANALYSIS.md  CONTAINERIZATION_GUIDE.md  DOCKER.md  Dockerfile  Dockerfile.backend  Dockerfile.dev  Dockerfile.frontend  FRONTEND_INTEGRATION_DOCS.md  IMPLEMENTATION_SUMMARY.md  README.md  README_ENHANCED.md  README_REFACTORED.md  TODO.md  Untitled-2  convert_csv_to_json.py  cookies.txt  deploy-gcp.sh  docker-compose.yml  enhanced_llm_integration.py  gcp-backend.yaml  gcp-frontend.yaml  googe-scholar.py  main.py  main_with_llm.py  openai_orchestrator.py  package-lock.json  pyproject.toml  requirements.txt  robust_llm_integration.py  run.py  run_test_servers.sh  sentence_orchestrator.py  sentence_seed_generator.py  setup.py  (+7 more)
app/: __init__.py  auth.py  conjugation_checker.py  database.py  flashcard.py  module1.py  routes.py  settings.py
datum/: adjectives.json  adjectives.json.backup  adjectives.json.backup2  base_nouns.json  colors_basic.json  days_of_week.json  greetings_essential.json  hiragana.csv  hiragana.json  katakana.json  katakana_words.json  months_complete.json  numbers_basic.json  numbers_extended.json  question_words.json  verbs.csv  verbs.json  vocab-1-6.csv  vocab-1-6.json  vocab-app.csv  vocab-small.csv  vocab-small.json  vocab.json
doc/: API_DOCUMENTATION.md  API_ENDPOINTS.md  ARCHITECTURE.md  AUTHENTICATION.md  FRONTEND_MIGRATION.md  TESTING.md
docs/: deploy_gcp_procedure.md  (+2 more)
(+583 files in other folders)
